--- a/sass/css.scss
+++ b/sass/css.scss
@@ -74,7 +74,18 @@ nav{
 }
 .botContent{
 	height: 140%;
+	.titleCard{
+		color: black;
+	}
+	.iconCard{
+		background-color: lighten($primary-color, 50%);
+		padding: 5%;
+		border-radius: 2em;
+		margin-bottom: 5%;
+		color: $primary-color;
+	}
 	img{
 		opacity: .1;
+		position: absolute;
 	}
 }
