--- a/sass/css.scss
+++ b/sass/css.scss
@@ -73,15 +73,21 @@ nav{
 	height: 15%;
 }
 .botContent{
+	.cardClass{
+		margin-top: 10%;
+	}
 	height: 140%;
+	color: $primary-color; 
+	h4{
+		color: $primary-color;
+	}
 	.titleCard{
-		color: black;
+		color: $primary-color;
 	}
 	.iconCard{
 		background-color: lighten($primary-color, 50%);
 		padding: 5%;
 		border-radius: 2em;
-		margin-bottom: 5%;
 		color: $primary-color;
 	}
 	img{
