--- a/css/css.css
+++ b/css/css.css
@@ -27,6 +27,8 @@ nav {
 
 .features {
   margin-top: 110%; }
+  .features #bottom {
+    margin-bottom: 5%; }
   .features i, .features p {
     color: #ebebeb;
     text-shadow: 1px 1px 1px black; }
@@ -57,6 +59,9 @@ nav {
   height: 15%; }
 
 .botContent {
+  height: 170%;
+  position: absolute;
+  overflow: hidden;
   color: #2980B9; }
   .botContent .cardClass {
     margin-top: 10%; }
@@ -72,6 +77,7 @@ nav {
   .botContent img {
     height: 150%;
     opacity: .2;
+    overflow-x: hidden;
     position: absolute; }
 
 /*# sourceMappingURL=css.css.map */
