--- a/sass/css.scss
+++ b/sass/css.scss
@@ -38,7 +38,7 @@ nav{
 .features{
 	margin-top: 110%;
 	#bottom{
-		margin-bottom: 5%;
+		margin-top: 100%;
 	}
 	i, p{
 		color: darken(white, 8%);
@@ -66,7 +66,7 @@ nav{
 		margin-top: 15%;
 	}
 }
-.foot{
+.foot, .footStuff{
 	margin-top: 10%;
 	background-color: lighten($primary-color, 50%);
 	color: lighten(black, 30%);
@@ -75,10 +75,13 @@ nav{
 .footTop{
 	height: 15%;
 }
+.footStuff{
+position: fixed;
+}
 
 
 .botContent{
-	height: 170%;
+	height: 180%;
 	position: absolute;
     overflow: hidden;
 	.cardClass{
