--- a/sass/css.scss
+++ b/sass/css.scss
@@ -72,18 +72,23 @@ nav{
 	color: lighten(black, 30%);
 	font-size: 140%;
 }
-.footTop{
+.footTop, {
 	height: 15%;
 }
-.footStuff{
-position: fixed;
+.footBot{
+	height: 30%;
+	background-color: $primary-color;
+	color: lighten($primary-color, 50%)
 }
-
+.bottomStuff{
+	height: 80%;
+}
 
 .botContent{
 	height: 180%;
-	position: absolute;
+	position: relative;
     overflow: hidden;
+    margin-bottom: -69.5%;
 	.cardClass{
 		margin-top: 10%;
 	}
@@ -101,9 +106,7 @@ position: fixed;
 		color: $primary-color;
 	}
 	img{
-		height:150%;
 		opacity: .2;
-		overflow-x: hidden;
 		position: absolute;
 	}
 }
