--- a/css/css.css
+++ b/css/css.css
@@ -1,131 +1,24 @@
-.loTop {
-  font-size: 180%;
-  margin-left: 2%; }
+@media screen and (max-width: 750px) {
+  .loTop {
+    font-size: 180%;
+    margin-left: 2%; }
 
-nav {
-  background-color: #2980B9; }
-  nav a:link, nav a:active, nav a:visited {
-    font-style: none; }
+  nav {
+    background-color: #2980B9; }
+    nav a:link, nav a:active, nav a:visited {
+      font-style: none; }
 
-.loRight {
-  background-color: #409ad5; }
+  .loRight {
+    background-color: #409ad5; }
 
-#titleFront {
-  color: white;
-  margin-top: 10%;
-  text-shadow: 1px 1px 1px black; }
-
-#topDiv {
-  background: url("../images/background1.jpg");
-  background-repeat: no-repeat;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -moz-box-orient: vertical;
-  -moz-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column; }
-  #topDiv .icon {
-    margin-top: 10%; }
-    #topDiv .icon i {
-      color: white;
-      opacity: 0.5; }
-
-.features {
-  margin-top: 110%; }
-  .features #bottom {
-    margin-top: 100%; }
-  .features i, .features p {
-    color: #ebebeb;
+  #titleFront {
+    color: white;
+    margin-top: 10%;
     text-shadow: 1px 1px 1px black; }
-  .features p {
-    font-size: 130%; }
 
-.signUp {
-  background-color: #2980B9; }
-
-.signUp:active, .signUp:link, .signUp:hover, .signUp:visited {
-  background-color: #2980B9; }
-
-.title {
-  color: white;
-  text-shadow: 1px 1px 1px black; }
-  .title p {
-    font-size: 110%; }
-  .title p, .title a {
-    margin-top: 15%; }
-
-.foot, .footStuff {
-  margin-top: 10%;
-  background-color: #2980B9;
-  color: white;
-  font-size: 140%; }
-
-.footTop {
-  height: 20%; }
-
-.footBot {
-  color: white;
-  font-size: 140%;
-  margin-top: 10%; }
-
-.signUp {
-  font-size: 100%; }
-
-.botBut {
-  margin-bottom: 15%;
-  margin-top: 5%; }
-
-.bottomStuff {
-  background-color: #2980B9;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -moz-box-orient: vertical;
-  -moz-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column; }
-
-.botContent {
-  overflow: hidden;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -moz-box-orient: vertical;
-  -moz-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  position: relative;
-  color: #2980B9; }
-  .botContent .cardClass {
-    margin-top: 10%; }
-  .botContent h4 {
-    color: #2980B9; }
-  .botContent .titleCard {
-    color: #2980B9; }
-  .botContent .iconCard {
-    background-color: #e7f2fa;
-    padding: 5%;
-    border-radius: 2em;
-    color: #2980B9; }
-  .botContent img {
-    opacity: .2;
-    position: absolute;
+  #topDiv {
+    background: url("../images/background1.jpg");
+    background-repeat: no-repeat;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -138,5 +31,113 @@ nav {
     -moz-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column; }
+    #topDiv .icon {
+      margin-top: 10%; }
+      #topDiv .icon i {
+        color: white;
+        opacity: 0.5; }
+
+  .features {
+    margin-top: 110%; }
+    .features #bottom {
+      margin-top: 100%; }
+    .features i, .features p {
+      color: #ebebeb;
+      text-shadow: 1px 1px 1px black; }
+    .features p {
+      font-size: 130%; }
+
+  .signUp {
+    background-color: #2980B9; }
+
+  .signUp:active, .signUp:link, .signUp:hover, .signUp:visited {
+    background-color: #2980B9; }
+
+  .title {
+    color: white;
+    text-shadow: 1px 1px 1px black; }
+    .title p {
+      font-size: 110%; }
+    .title p, .title a {
+      margin-top: 15%; }
+
+  .foot, .footStuff {
+    margin-top: 10%;
+    background-color: #2980B9;
+    color: white;
+    font-size: 140%; }
+
+  .footTop {
+    height: 20%; }
+
+  .footBot {
+    color: white;
+    font-size: 140%;
+    margin-top: 10%; }
+
+  .signUp {
+    font-size: 100%; }
+
+  .botBut {
+    margin-bottom: 15%;
+    margin-top: 5%; }
+
+  .bottomStuff {
+    background-color: #2980B9;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+
+  .botContent {
+    overflow: hidden;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    position: relative;
+    color: #2980B9; }
+    .botContent .cardClass {
+      margin-top: 10%; }
+    .botContent h4 {
+      color: #2980B9; }
+    .botContent .titleCard {
+      color: #2980B9; }
+    .botContent .iconCard {
+      background-color: #e7f2fa;
+      padding: 5%;
+      border-radius: 2em;
+      color: #2980B9; }
+    .botContent img {
+      opacity: .2;
+      position: absolute;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -moz-box-orient: vertical;
+      -moz-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
 /*# sourceMappingURL=css.css.map */
