--- a/sass/media.scss
+++ b/sass/media.scss
@@ -1,10 +1,11 @@
 $primary-color: #2980B9;
 $secondary-color:#f44336;
 
-@media screen and (max-width: 750px) {
+body{
+	width: 100vw;
+}
 .loTop {
 	font-size: 180%;
-	margin-left: 2%;
 }
 nav{
 	background-color: $primary-color;
@@ -12,14 +13,24 @@ nav{
 		font-style: none;
 	}
 }
+#logIn{
+	width: 100%;
+}
 .loRight{
 	background-color: lighten($primary-color, 10%);
+	width: 20%;
+	a{
+		font-size: 120%;
+	}
 }
 
 #titleFront{
-	color: white;
-	margin-top: 10%;
-	text-shadow: 1px 1px 1px black;
+	font-size: 400%;
+	color: darken($primary-color, 20%);
+	margin-top: 15%;
+}
+#subFront{
+	font-size: 150%;
 }
 
 
@@ -48,7 +59,7 @@ nav{
 }
 
 .features{
-	margin-top: 110%;
+	margin-top: 10%;
 	#bottom{
 		margin-top: 100%;
 	}
@@ -57,12 +68,13 @@ nav{
 		text-shadow: 1px 1px 1px black;
 	}
 	p{
-		font-size: 130%;
+		font-size: 200%;
 	}
 }
 
 .signUp{
 	background-color: $primary-color;
+	font-size: 200%;
 }
 .signUp:active, .signUp:link, .signUp:hover, .signUp:visited{
 	background-color: $primary-color;
@@ -78,19 +90,15 @@ nav{
 		margin-top: 15%;
 	}
 }
-.foot, .footStuff{
-	margin-top: 10%;
+.foot, .footStuff, .footBot{
 	background-color: $primary-color;
 	color: white;
-	font-size: 140%;
+	font-size: 200%;
 }
+
 .footTop, {
-	height: 20%;
-}
-.footBot{
-	color: white;
-	font-size: 140%;
-	margin-top: 10%;
+	height: 30%;
+	margin-left: 10%;
 }
 .signUp{
 	font-size: 100%;
@@ -150,18 +158,6 @@ nav{
 	img{
 		opacity: .2;
 		position: absolute;
-		display: -webkit-box;
-  		display: -webkit-flex;
-  		display: -moz-box;
-  		display: -ms-flexbox;
-  		display: flex;
-		-webkit-box-orient: vertical;
-  		-webkit-box-direction: normal;
-  		-webkit-flex-direction: column;
-  		-moz-box-orient: vertical;
-  		-moz-box-direction: normal;
-  		-ms-flex-direction: column;
-  		flex-direction: column;
+		height: 82.4%
 	}
-}
 }
