--- a/css/css.css
+++ b/css/css.css
@@ -14,7 +14,11 @@
   #titleFront {
     color: white;
     margin-top: 10%;
+    font-size: 250%;
     text-shadow: 1px 1px 1px black; }
+
+  #subFront {
+    font-size: 110%; }
 
   #topDiv {
     background: url("../images/background1.jpg");
@@ -62,7 +66,6 @@
       margin-top: 15%; }
 
   .foot, .footStuff {
-    margin-top: 10%;
     background-color: #2980B9;
     color: white;
     font-size: 140%; }
@@ -127,17 +130,6 @@
     .botContent img {
       opacity: .2;
       position: absolute;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -moz-box-orient: vertical;
-      -moz-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column; } }
+      height: 100%; } }
 
 /*# sourceMappingURL=css.css.map */
