--- a/css/media.css
+++ b/css/media.css
@@ -29,6 +29,7 @@ nav {
 
 #topDiv {
   background: url("../images/background1.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
   display: -webkit-box;
   display: -webkit-flex;
@@ -50,18 +51,18 @@ nav {
     #topDiv .icon i:hover {
       opacity: .75; }
 
+#textTry {
+  text-align: center; }
+
 .features {
   margin-top: 10%; }
   .features #bottom {
     margin-top: 100%; }
   .features i, .features p {
-    color: #ebebeb;
+    color: #CCCCCC;
     text-shadow: 1px 1px 1px black; }
   .features p {
     font-size: 200%; }
-
-.signUp:active, .signUp:link, .signUp:hover, .signUp:visited {
-  background-color: #2980B9; }
 
 .title {
   color: white;
@@ -77,12 +78,15 @@ nav {
   font-size: 200%; }
 
 .footTop {
-  height: 30%;
-  margin-left: 10%; }
+  height: 30%; }
+  .footTop p {
+    text-align: center;
+    padding-top: 6%; }
 
 .signUp {
   font-size: 250%;
-  background-color: #2980B9;
+  color: #CCCCCC;
+  background-color: #206695;
   border-radius: 2em; }
 
 .footBot {
@@ -91,6 +95,9 @@ nav {
 .botBut {
   margin-bottom: 15%;
   margin-top: 5%; }
+
+.signUp:active, .signUp:link, .signUp:hover, .signUp:visited {
+  background-color: #2980B9; }
 
 .bottomStuff {
   background-color: #2980B9;
