--- a/css/css.css
+++ b/css/css.css
@@ -130,6 +130,22 @@
       background-color: #e7f2fa;
       padding: 5%;
       border-radius: 2em;
-      color: #2980B9; } }
+      color: #2980B9; }
+    .botContent img {
+      opacity: .2;
+      position: absolute;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -moz-box-orient: vertical;
+      -moz-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      height: 100%; } }
 
 /*# sourceMappingURL=css.css.map */
