--- a/sass/css.scss
+++ b/sass/css.scss
@@ -9,7 +9,7 @@ $secondary-color:#f44336;
 nav{
 	background-color: $primary-color;
 	a:link, a:active, a:visited{
-		font-style: none;
+		background-color: $primary-color;
 	}
 }
 .loRight{
@@ -66,7 +66,7 @@ nav{
 
 .signUp{
 	background-color: $primary-color;
-	color: #CCCCCC;
+	color: white;
 }
 .signUp:active, .signUp:link, .signUp:hover, .signUp:visited{
 	background-color: $primary-color;
