pushing to github pages

--- a/css/css.css
+++ b/css/css.css
@@ -46,7 +46,7 @@
     .features #bottom {
       margin-top: 100%; }
     .features i, .features p {
-      color: #CCCCCC;
+      color: white;
       text-shadow: 1px 1px 1px black; }
     .features p {
       font-size: 130%; }
