--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 750px) {
+  body {
+    font-family: helvetica; }
+
   .loTop {
     font-size: 180%;
     margin-left: 2%; }
@@ -72,9 +75,9 @@
     font-size: 140%; }
 
   .footTop {
-    height: 20%; }
-    .footTop p {
-      margin-top: 5%; }
+    height: 20%;
+    vertical-align: middle;
+    margin-bottom: 5%; }
 
   .footBot {
     color: white;
@@ -132,20 +135,8 @@
       border-radius: 2em;
       color: #2980B9; }
     .botContent img {
-      opacity: .2;
+      opacity: .3;
       position: absolute;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -moz-box-orient: vertical;
-      -moz-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column;
       height: 100%; } }
 
 /*# sourceMappingURL=css.css.map */
