--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,5 +1,6 @@
 @media screen and (min-width: 1410px) {
   body {
+    font-family: roboto;
     width: 100vw; }
 
   .loTop {
@@ -85,11 +86,11 @@
   .footTop {
     height: 30%; }
     .footTop p {
-      text-align: center;
-      padding-top: 6%;
+      vertical-align: middle;
       font-size: 150%;
-      margin-left: 10%;
-      margin-right: 10%; }
+      margin-left: 8%;
+      margin-right: 8%;
+      padding-top: 6%; }
 
   .signUp {
     font-size: 300%;
@@ -157,7 +158,7 @@
       color: #2980B9;
       font-size: 400%; }
     .botContent img {
-      opacity: .2;
+      opacity: .3;
       position: absolute;
       height: 100%; } }
 
