made changes to the font

--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 750px) {
   body {
-    font-family: helvetica; }
+    font-family: roboto, arial; }
 
   .loTop {
     font-size: 180%;
