--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 1410px) {
   body {
-    font-family: roboto;
+    font-family: roboto, arial;
     width: 100vw; }
 
   .loTop {
