--- a/sass/css.scss
+++ b/sass/css.scss
@@ -1,9 +1,11 @@
 $primary-color: #2980B9;
 $secondary-color:#f44336;
+$font-primary: roboto, arial;
+
 
 @media screen and (max-width: 750px) {
 	body{
-		font-family: helvetica; 
+		font-family: $font-primary; 
 	}
 .loTop {
 	font-size: 180%;
