--- a/sass/media.scss
+++ b/sass/media.scss
@@ -1,9 +1,11 @@
 $primary-color: #2980B9;
 $secondary-color:#f44336;
+$font-primary: roboto, arial;
 @media screen and (max-width: 1400px) {
 
 
 body{
+	font-family: $font-primary
 	width: 100vw;
 }
 .loTop {
